--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 * {
   margin: 0;
 }
-form {
-  width: 1000px;
+.pad {
   margin-top: 30px;
 }
+form {
+  width: 700px;
 
+}
+.preview-box {
+  margin-left: 20px;
+}
 div,
 h2 {
   margin: 1px;
   padding: 1px;
-}
-h2 {
   font-size: 1em;
 }
 form {
@@ -19,6 +22,7 @@ form {
 }
 .columns {
   display: flex;
+  font-size: 0.8em;
 }
 textarea,
 input[type='text'],
