--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 * {
   margin: 0;
 }
+select {
+  background-color: rgb(240, 240, 240);
+  border-color: rgb(120, 120, 120);
+  border-style: outset;
+  border-radius: 2.5px;
+  border-width: 1px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
 .pad {
   margin-top: 30px;
 }
 form {
   width: 700px;
-
 }
 .preview-box {
   margin-left: 20px;
